--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,19 +22,19 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="bottom"
-        app:addElevationShadow="true"
         android:layout_marginStart="-20dp"
+        app:addElevationShadow="true"
         app:fabAnimationMode="slide">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav_view"
             android:layout_width="wrap_content"
-            android:background="@color/dark_grey"
             android:layout_height="match_parent"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_main_menu"
+            android:background="@color/dark_grey"
             app:itemIconTint="@color/color_selector"
-            app:itemTextColor="@color/color_selector">
+            app:itemTextColor="@color/color_selector"
+            app:labelVisibilityMode="labeled"
+            app:menu="@menu/bottom_main_menu">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
     </com.google.android.material.bottomappbar.BottomAppBar>
