--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,98 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark">
+    android:background="@color/dark"
+    android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/dark"
-            app:contentScrim="@color/dark"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:titleEnabled="false">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <com.google.android.material.search.SearchBar
-                        android:id="@+id/search_bar_courses"
-                        style="@style/Widget.Material3.SearchBar"
-                        android:layout_width="0dp"
-                        android:layout_height="56dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_weight="3"
-                        android:backgroundTint="@color/dark_grey"
-                        android:hint="Search courses..."
-                        android:visibility="visible"
-                        app:layout_collapseMode="pin"
-                        app:navigationIcon="@drawable/search_local"
-                        app:tintNavigationIcon="@android:color/transparent" />
-
-                    <ImageView
-                        android:id="@+id/image_view_filter"
-                        android:layout_width="56dp"
-                        android:layout_height="56dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:clickable="true"
-                        android:layout_marginBottom="16dp"
-                        android:background="@drawable/round_button_background"
-                        android:backgroundTint="@color/dark_grey"
-                        android:focusable="true"
-                        android:padding="17dp"
-                        android:src="@drawable/vector"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:gravity="bottom|end"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/text_view_sort_label"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="3dp"
-                        android:focusable="true"
-                        android:gravity="end"
-                        android:text="По популярности"
-                        android:clickable="true"
-                        android:textColor="@color/green" />
-
-                    <ImageView
-                        android:id="@+id/image_view_sort"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:src="@drawable/sort"/>
-                </LinearLayout>
-            </LinearLayout>
-
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:padding="16dp"
+        android:text="Избранное"
+        android:textColor="@color/white"
+        android:textSize="22sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,9 +25,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_courses"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
