--- a/app/src/main/res/layout/item_course_list.xml
+++ b/app/src/main/res/layout/item_course_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -35,19 +34,21 @@
         <eightbitlab.com.blurview.BlurView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_marginEnd="8dp"
+            android:elevation="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:id="@+id/image_view_course_flag"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:padding="8dp"
                 android:background="@drawable/background_flag"
-                android:src="@drawable/flag">
-            </ImageView>
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="8dp"
+                android:src="@drawable/ic_flag"/>
         </eightbitlab.com.blurview.BlurView>
 
         <eightbitlab.com.blurview.BlurView
@@ -64,6 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:id="@+id/linear_layout_rating"
                     android:layout_width="wrap_content"
@@ -77,7 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="4dp"
-                        android:src="@drawable/star">
+                        android:src="@drawable/ic_star">
 
                     </ImageView>
 
@@ -107,11 +109,9 @@
                         android:fontFamily="@font/roboto"
                         android:text="22 Мая 2024"
                         android:textColor="@color/white"
-                        android:textSize="12sp">
-                    </TextView>
+                        android:textSize="12sp"/>
                 </LinearLayout>
             </LinearLayout>
-
 
 
         </eightbitlab.com.blurview.BlurView>
@@ -168,7 +168,7 @@
                     android:fontFamily="@font/roboto"
                     android:text="999 ₽"
                     android:textColor="@color/white"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -194,7 +194,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginTop="2dp"
-                        android:src="@drawable/arrow"/>
+                        android:src="@drawable/ic_arrow" />
                 </LinearLayout>
             </LinearLayout>
 
