--- a/app/src/main/res/layout/item_spinner_list.xml
+++ b/app/src/main/res/layout/item_spinner_list.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/dark_grey"
     android:orientation="horizontal"
-    tools:ignore="ContentDescription"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:ignore="ContentDescription">
 
     <TextView
         android:id="@+id/text_view_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:maxLines="1"
         android:text="По популярности"
         android:textColor="@color/white"
-        android:fontFamily="@font/roboto"
         android:textSize="12sp" />
 
 </LinearLayout>
