--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
     app:startDestination="@id/mainFragment">
-
+    <action
+        android:id="@+id/action_global_to_descriptionFragment"
+        app:destination="@id/descriptionFragment" />
     <activity
         android:id="@+id/mainActivity"
         android:name="com.example.trainingCourses.presentation.activities.MainActivity"
@@ -17,9 +19,6 @@
         <action
             android:id="@+id/action_mainFragment_to_filterFragment"
             app:destination="@id/filterFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_descriptionFragment"
-            app:destination="@id/descriptionFragment" />
     </fragment>
     <dialog
         android:id="@+id/filterFragment"
@@ -29,5 +28,10 @@
         android:id="@+id/descriptionFragment"
         android:name="com.example.trainingCourses.presentation.fragment.DescriptionFragment"
         android:label="DescriptionFragment" >
+    </fragment>
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.example.trainingCourses.presentation.fragment.FavoritesFragment"
+        android:label="FavoritesFragment" >
     </fragment>
 </navigation>
